--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "gatsby": "^2.24.79",
+    "gatsby": "^2.24.80",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-feed": "^2.5.14",
     "gatsby-plugin-google-analytics": "^2.3.18",
@@ -50,6 +50,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
