--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,5 +11,5 @@ jobs:
       - uses: enriikke/gatsby-gh-pages-action@v2
         with:
           access-token: ${{ secrets.ACCESS_TOKEN }}
-          deploy-branch: main
+          deploy-branch: gh-pages
           gatsby-args: --prefix-paths
