--- a/.github/workflows/announce.yml
+++ b/.github/workflows/announce.yml
@@ -20,7 +20,7 @@ jobs:
         # TODO(thomas): this currently triggers on all modifications and then just picks the first
         # TODO(thomas): blog post tags should eventually become hashtags
         run: |
-          file=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep ^content/blog | head -n 1)
+          file=$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | grep ^content/blog/.*.md$ | head -n 1)
           url=$(echo ${file} | sed 's+content/blog+https://blog.thomasjungblut.com+g' | sed 's/.md//g')
           echo "::set-output name=blog_post_url::${url}"
           name=$(cat ${file} | cat $a | grep 'title:' | sed -n "s/^.*'\(.*\)'.*$/\1/ p")
