--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "gatsby": "^2.24.80",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-feed": "^2.5.14",
-    "gatsby-plugin-google-analytics": "^2.3.18",
+    "gatsby-plugin-google-analytics": "^2.3.19",
     "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-offline": "^3.2.33",
     "gatsby-plugin-pinterest-twitter-facebook": "^1.11.2",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.6.42",
+    "gatsby-plugin-sitemap": "^2.4.17",
     "gatsby-remark-copy-linked-files": "^2.3.19",
     "gatsby-remark-images": "^3.3.35",
     "gatsby-remark-prismjs": "^3.5.16",
