--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-plugin-sitemap": "^2.4.17",
+    "gatsby-remark-autolink-headers": "^2.5.0",
     "gatsby-remark-copy-linked-files": "^2.3.19",
     "gatsby-remark-images": "^3.3.35",
     "gatsby-remark-prismjs": "^3.5.16",
     "gatsby-remark-responsive-iframe": "^2.4.17",
     "gatsby-remark-smartypants": "^2.3.13",
+    "gatsby-remark-table-of-contents": "^0.1.1",
     "gatsby-source-filesystem": "^2.3.35",
     "gatsby-transformer-remark": "^2.8.41",
     "gatsby-transformer-sharp": "^2.5.18",
