--- a/package.json
+++ b/package.json
@@ -7,37 +7,46 @@
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
+  "resolutions": {
+    "graphql": "^15.4.0",
+    "graphql-compose": "^7.25.0",
+    "webpack": "^5.24.2",
+    "postcss": "8.2.6"
+  },
   "dependencies": {
-    "gatsby": "^2.24.80",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-feed": "^2.5.14",
-    "gatsby-plugin-manifest": "^2.4.34",
-    "gatsby-plugin-offline": "^3.2.33",
+    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "gatsby": "^3.0.0",
+    "gatsby-plugin-feed": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-pinterest-twitter-facebook": "^1.11.2",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sharp": "^2.6.42",
-    "gatsby-plugin-sitemap": "^2.4.17",
-    "gatsby-remark-autolink-headers": "^2.5.0",
-    "gatsby-remark-copy-linked-files": "^2.3.19",
-    "gatsby-remark-images": "^3.3.35",
-    "gatsby-remark-prismjs": "^3.5.16",
-    "gatsby-remark-responsive-iframe": "^2.4.17",
-    "gatsby-remark-smartypants": "^2.3.13",
-    "gatsby-remark-table-of-contents": "^0.2.1",
-    "gatsby-source-filesystem": "^2.3.35",
-    "gatsby-transformer-remark": "^2.8.41",
-    "gatsby-transformer-sharp": "^2.5.18",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-remark-autolink-headers": "^3.0.0",
+    "gatsby-remark-copy-linked-files": "^3.0.0",
+    "gatsby-remark-images": "^4.0.0",
+    "gatsby-remark-prismjs": "^4.0.0",
+    "gatsby-remark-responsive-iframe": "^3.0.0",
+    "gatsby-remark-smartypants": "^3.0.0",
+    "gatsby-remark-table-of-contents": "^1.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-remark": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "node-fetch": "^2.6.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "prismjs": "^1.23.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "typeface-merriweather": "^1.1.13",
+    "typeface-montserrat": "^1.1.13"
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
     "gh-pages": "^3.1.0",
-    "prettier": "2.1.2"
+    "prettier": "^2.2.1"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
