--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-sitemap": "^3.0.0",
     "gatsby-remark-autolink-headers": "^3.0.0",
     "gatsby-remark-copy-linked-files": "^3.0.0",
+    "gatsby-remark-embed-video": "^3.1.1",
     "gatsby-remark-images": "^4.0.0",
     "gatsby-remark-prismjs": "^4.0.0",
     "gatsby-remark-responsive-iframe": "^3.0.0",
