--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "gatsby": "^3.0.0",
+    "gatsby-cli": "^4.2.0",
     "gatsby-plugin-feed": "^3.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
