--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "node-fetch": "^2.6.1",
+    "pngquant-bin": "^8.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "prismjs": "^1.23.0",
     "react": "^17.0.1",
