--- a/.github/workflows/gatsby-build.yml
+++ b/.github/workflows/gatsby-build.yml
@@ -1,8 +1,5 @@
 name: gatsby-build
-on:
-  pull_request:
-    branches: [main]
-
+on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
